--- a/Notes/CCM Notes/main.tex
+++ b/Notes/CCM Notes/main.tex
@@ -17,7 +17,7 @@
 
 \section{Basic Idea}
 Convergent cross mapping (CCM) is introduced in {\em Detecting Causality in
-Complex Ecosystems}\footnote{http://www.uvm.edu/\~cdanfort/csc-reading-group/sugihara-causality-science-2012.pdf} by Sugihara {\em et. al.}.  The supplementary text for that paper is very helpful\footnote{http://www.sciencemag.org/content/suppl/2012/09/19/science.1227079.DC1/Sugihara.SM.pdf}, although care should be taken when comparing the figure numbers between the text documents (the figure numbers in the supplementary text seem to be off by one).
+Complex Ecosystems}\footnote{http://www.uvm.edu/$\sim$cdanfort/csc-reading-group/sugihara-causality-science-2012.pdf} by Sugihara {\em et. al.}.  The supplementary text for that paper is very helpful\footnote{http://www.sciencemag.org/content/suppl/2012/09/19/science.1227079.DC1/Sugihara.SM.pdf}, although care should be taken when comparing the figure numbers between the text documents (the figure numbers in the supplementary text seem to be off by one).
 
 CCM is a technique used to identify ``causality'' between time series and is intended to be useful in situations where the only other statistical ``causality'' measure, Granger causality, is known to be invalid (i.e.\ in dynamic systems that are ``nonseperable'').  The authors state that CCM is a ``necessary condition for causation'', but it may be best to avoid all discussion of causality in this work.  It is well known (refs would be nice) that Granger causality is unrelated to causality as it is typically understood in physics.  As such, rather than consider the necessity and sufficiency of CCM for causation, we will use the term ``directed correlation''. 
 
@@ -87,7 +87,7 @@ added or removed from the model with no effect. Nonseparability arises from the 
 
 Intuitively, if $X$ drives $Y$, then the time series $Y$ contains information about $X$ and (again, intuitively) $Y$ can be predicted from $X$ (if the dynamics are known).  This issue illustrates ones of the problem with using terminology like ``causation'' for this method.  Notice that this method centers on estimating a value at a time of interest in one time series using points from another time series that have been chosen for their similar histories to the point in that times series at the time of interest.  The key idea is comparing histories.  If $X$ drive $Y$, then similar histories of $Y$ will imply similar histories of $X$ (because $X$ drives $Y$).  But notice that it is not necessarily true that similar histories of $X$ will imply similar histories of $Y$.  This idea will be seen in many of the examples below.
 
-To belabour the point, consider the following quote from Parltiz in {\em Nonlinear Time-Series Analysis}\footnote{http://www.physik3.gwdg.de/\~ulli/pdf/P98b.pdf}:
+To belabour the point, consider the following quote from Parltiz in {\em Nonlinear Time-Series Analysis}\footnote{http://www.physik3.gwdg.de/$\sim$ulli/pdf/P98b.pdf}:
 
 ``Since the response system ``experiences'' the dynamics of the drive system it is no surprise that we can use the response time series to predict the drive time series.  This is in full agreement with Taken's theorem.  On the other, we can in general not expect that the response time series can be predicted on the basis of the time series from the drive system, because the drive system has no information about the actual dynamics of the response.'' [Section 8.9.2] 
 
@@ -97,7 +97,100 @@ Consider the example system used by Sugihara {\em et.\ al.\ }:
 X(t) &=& X(t-1)\left(r_x-r_x X(t-1)-\beta_{xy} Y(t-1)\right)\\
 Y(t) &=& Y(t-1)\left(r_y-r_y Y(t-1)-\beta_{yx} X(t-1)\right)
 \end{eqnarray*}
-where $r_x,r_y,\beta_{xy},\beta_{yx}\in\mathbf{R}$.
+where $r_x,r_y,\beta_{xy},\beta_{yx}\in\mathbf{R}$.  Even if the four parameters of the systems (i.e.\ $r_x,r_y,\beta_{xy}$ and $\beta_{yx}$) are set, the CCM analysis of this system depends on three other parameters: the library length $L$, the embedding dimension $E$, and the time step $\tau$.
+
+Following Sugihara's example, let $r_x=3.8$, $r_y=3.5$, $\beta_{xy}=0.01$, and $\beta_{yx}=0.2$ with the initial conditions of $X(t_0) = 0.4$ and $Y(t_0)=0.2$.  Given this parameter set (and the discussion in the previous section), it is expected that $C_{YX}<C_{XY}$ will be true because $\beta_{yx}>\beta_{xy}$.  If $\beta_{yx}>\beta_{xy}$, then $X$ ``drives'' $Y$ more than $Y$ ``drives'' $X$; hence, the histories of $Y$ will contain more information about $X$ than the histories of $X$ contain about $Y$, which leads to the aforementioned expectation of $C_{YX}<C_{XY}$.  Indeed, $C_{XY}\approx 0.75$ and $C_{YX}\approx -0.11$ for $L=100$, $E=2$, and $\tau = 1$.
+
+Notice, however, that the actual values of $C_{XY}$ and $C_{YX}$ depend strongly on $L$, $E$, and $\tau$.  Figure \ref{fig:CxyCyxVL} shows $C_{XY}$ and $C_{YX}$ calculated using all of the parameter values from the previous paragraph but with the library length $L$ ranging from 10 to 500.
+\begin{figure}[h!t]
+\label{fig:CxyCyxVL}
+\includegraphics[scale=1]{CxyCyxVL.png}
+\caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ with $\tau=1$ and $E=2$.}
+\end{figure}
+Both directed correlations appear to converge to some nominal value and $C_{YX}<C_{XY}$ over most of the range (as expected).  But, notice that the small library length behaviour does not appear to follow expectations (i.e.\ $C_{YX}>C_{XY}$ for small $L$).
+
+If instead the library length is fixed and the embedding dimension is varied, then the behaviour of the directed correlation changes dramatically.  Figure \ref{fig:CxyCyxVE} shows $C_{XY}$ and $C_{YX}$ calculated using all of the parameter values from above (and with $L=100$) but with the embedding dimension $E$ ranging from 2 to 50. 
+\begin{figure}[h!t]
+\label{fig:CxyCyxVE}
+\includegraphics[scale=1]{CxyCyxVE.png}
+\caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ with $\tau=1$ and $L=100$.}
+\end{figure}
+There are points over the embedding range when $C_{YX}<C_{XY}$ but there are also points where $C_{YX}>C_{XY}$, which is difficult to interpret with the given parameter set.  The dependence on the embedding dimension is concerning because it implies that incorrect conclusions can be drawn about natural data sets (i.e.\ time series where the theoretical dynamics are not known) regarding which directed correlation is dominate (i.e.\ which time series is the dominate ``driver'').  Similar issues arise when plotting the directed correlation over a range for the time step $\tau$ from 1 to 25 (see Figure \ref{fig:CxyCyxVtau}).  
+\begin{figure}[h!t]
+\label{fig:CxyCyxVtau}
+\includegraphics[scale=1]{CxyCyxVtau.png}
+\caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ with $E=2$ and $L=100$.}
+\end{figure}
+
+The directed correlation acts as expected for $L=100$, $E=2$, and $\tau=1$.  These values can be used (along with $r_x$ and $r_y$) to see how the directed correlation behaves over a range of $\beta_{yx}$ given $\beta_{xy}=0.5$.  Figure \ref{fig:CxyCyxVByx_raw} shows $C_{YX}$ and $C_{XY}$ plotted over the range $\beta_{yx}\in[0.01,1.0]$ (with $\beta_{xy}=0.5$), and Figure \ref{fig:CxyCyxVByx_diff} shows the difference $\Delta = (C_{XY}-C_{YX})$ over the same range.
+\begin{figure}[h!t]
+\label{fig:CxyCyxVByx_raw}
+\includegraphics[scale=1]{CxyCyxVByx_raw.png}
+\caption{$\left(r_x,r_y,\beta_{xy},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ with $\left(E,L,\tau\right)=\left(2,500,1\right)$.}
+\end{figure}
+\begin{figure}[h!t]
+\label{fig:CxyCyxVByx_diff}
+\includegraphics[scale=1]{CxyCyxVByx_diff.png}
+\caption{$\left(r_x,r_y,\beta_{xy},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ with $\left(E,L,\tau\right)=\left(2,500,1\right)$.}
+\end{figure}
+Notice that $\Delta$ is an increasing function of $\beta_{yx}$ that crosses zero around $\beta_{yx}=0.5$, as expected given the discussion of the CCM algorithm in the beginning sections.  Figure \ref{fig:CxyCyxVByxBxy_diff} is a plot of $\Delta$ of ranges for both coupling constants, i.e.\ $\beta_{xy}\in[0.01,1.0]$ and $\beta_{yx}\in[0.01,1.0]$.
+\begin{figure}
+\label{fig:CxyCyxVByxBxy_diff}
+\caption{Insert the correct figure here.  Make sure the parameter ranges agree with the text.}
+\end{figure}
+Following the intuative expectation, $\beta_{xy}>\beta_{yx}\Rightarrow \Delta<0$ and $\beta_{xy}<\beta_{yx}\Rightarrow \Delta>0$.
+
+Notice,$\Delta$ is not symmetric about zero for the pair $(\beta_{xy},\beta_{yx})$; i.e.\
+$$
+\left(\beta_{xy},\beta_{yx}\right) = \left(0.5,0.01\right) \Rightarrow \Delta \approx -0.27\;\;,
+$$
+but
+$$
+\left(\beta_{xy},\beta_{yx}\right) = \left(0.01,0.5\right) \Rightarrow \Delta \approx 0.42
+$$
+which is positive but not 0.27.  The difference $\Delta$ is symmetric about zero given the entire parameter set for each time series, i.e.\
+$$
+\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.5,0.01,0.4,0.2\right) \Rightarrow \Delta \approx -0.27
+$$
+and
+$$
+\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.5,3.8,0.01,0.5,0.2,0.4\right) \Rightarrow \Delta \approx 0.27\;\;.
+$$
+
+Given the results of this section, the CCM algorithm does provide a kind of coarse grained quantification of the idea of ``driving'' between two time series.  More specifically, the sign of $\Delta$ provides information about the relative strength of dependencies between two time series.
+
+\section{Lorenz System}
+Consider the following system of equations:
+\begin{eqnarray*}
+\dot{x} &=& \sigma\left(y-x\right)\\
+\dot{y} &=& \rho x-y-xz\\
+\dot{z} &=& xy - \beta z
+\end{eqnarray*}
+If $(\sigma,\beta,\rho)=(10,8/3,28)$, then the system's directed correlations are as follows:
+\begin{eqnarray*}
+C_{xy} &\approx & 0.91\\
+C_{yx} &\approx & 0.94\\
+C_{xz} &\approx & 0.11\\
+C_{zx} &\approx & 0.88\\
+C_{yz} &\approx & 0.08\\
+C_{zy} &\approx & 0.45
+\end{eqnarray*}
+where $x(t)$, $y(t)$, and $z(t)$ are defined by the dynamical system at the beginning of this section.  These results seem to imply $z\Rightarrow x$ and $z\Rightarrow y$ with no conclusion for the relationship between $x$ and $y$.  These results seem confusing.  In particular, it seems to make sense that $z$ could be a stronger driver of $y$ than $y$ is of $z$ (i.e.\ $z\Rightarrow y$) but the implication that $z$ is a stronger driver of $x$ than $x$ is of $z$ (i.e.\ $z\Rightarrow x$) is more difficult to interpret given that $z$ only affects $x$ through $y$.
+
+
+If $(\sigma,\beta,\rho)=(0.01,8/3,28)$, then the system's directed correlations are as follows:
+\begin{eqnarray*}
+C_{xy} &\approx & 0.79\\
+C_{yx} &\approx & -0.12\\
+C_{xz} &\approx & 0.90\\
+C_{zx} &\approx & -0.74\\
+C_{yz} &\approx & 0.47\\
+C_{zy} &\approx & 0.71
+\end{eqnarray*}
+which implies $x\Rightarrow y$, $z\Rightarrow y$, and $x\Rightarrow z$.  Both $x\Rightarrow y$ and $x\Rightarrow z$ seems to make intuative sense given the smaller $\sigma$ in this example versus the previous example, and $z\Rightarrow y$ is consistent with the previous example which, again, makes sense because neither $\rho$ nor $\beta$ was changed.
+
+
+
 
 
 
