--- a/Notes/CCM Notes/main.tex
+++ b/Notes/CCM Notes/main.tex
@@ -5,6 +5,8 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[margin=0.5in]{geometry}
+\usepackage{caption}
+\usepackage{subcaption}
 
 
 \begin{document}
@@ -103,45 +105,54 @@ Following Sugihara's example, let $r_x=3.8$, $r_y=3.5$, $\beta_{xy}=0.01$, and $
 
 Notice, however, that the actual values of $C_{XY}$ and $C_{YX}$ depend strongly on $L$, $E$, and $\tau$.  Figure \ref{fig:CxyCyxVL} shows $C_{XY}$ and $C_{YX}$ calculated using all of the parameter values from the previous paragraph but with the library length $L$ ranging from 10 to 500.
 \begin{figure}[h!t]
+\centering
 \label{fig:CxyCyxVL}
-\includegraphics[scale=1]{CxyCyxVL.eps}
+\includegraphics[scale=0.55]{CxyCyxVL.eps}
 \caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ with $\tau=1$ and $E=2$.}
 \end{figure}
 Both directed correlations appear to converge to some nominal value and $C_{YX}<C_{XY}$ over most of the range (as expected).  But, notice that the small library length behaviour does not appear to follow expectations (i.e.\ $C_{YX}>C_{XY}$ for small $L$).
 
-If instead the library length is fixed and the embedding dimension is varied, then the behaviour of the directed correlation changes dramatically.  Figure \ref{fig:CxyCyxVE} shows $C_{XY}$ and $C_{YX}$ calculated using all of the parameter values from above (and with $L=100$) but with the embedding dimension $E$ ranging from 2 to 50. 
+If instead the library length is fixed and the embedding dimension is varied, then the behaviour of the directed correlation changes dramatically.  Figure \ref{fig:CxyCyxVE} shows $C_{XY}$ and $C_{YX}$ calculated using all of the parameter values from above (and with $L=100$) but with the embedding dimension $E$ ranging from 2 to 50.  There are points over the embedding range when $C_{YX}<C_{XY}$ but there are also points where $C_{YX}>C_{XY}$, which is difficult to interpret with the given parameter set.  The dependence on the embedding dimension is concerning because it implies that incorrect conclusions can be drawn about natural data sets (i.e.\ time series where the theoretical dynamics are not known) regarding which directed correlation is dominate (i.e.\ which time series is the dominate ``driver'').  Similar issues arise when plotting the directed correlation over a range for the time step $\tau$ from 1 to 25 (see Figure \ref{fig:CxyCyxVtau}).  
 \begin{figure}[h!t]
+\centering
+\begin{subfigure}[b]{0.4\textwidth}
 \label{fig:CxyCyxVE}
-\includegraphics[scale=1]{CxyCyxVE.eps}
+\includegraphics[scale=0.55]{CxyCyxVE.eps}
 \caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ with $\tau=1$ and $L=100$.}
-\end{figure}
-There are points over the embedding range when $C_{YX}<C_{XY}$ but there are also points where $C_{YX}>C_{XY}$, which is difficult to interpret with the given parameter set.  The dependence on the embedding dimension is concerning because it implies that incorrect conclusions can be drawn about natural data sets (i.e.\ time series where the theoretical dynamics are not known) regarding which directed correlation is dominate (i.e.\ which time series is the dominate ``driver'').  Similar issues arise when plotting the directed correlation over a range for the time step $\tau$ from 1 to 25 (see Figure \ref{fig:CxyCyxVtau}).  
-\begin{figure}[h!t]
+\end{subfigure}
+\begin{subfigure}[b]{0.4\textwidth}
 \label{fig:CxyCyxVtau}
-\includegraphics[scale=1]{CxyCyxVtau.eps}
+\includegraphics[scale=0.55]{CxyCyxVtau.eps}
 \caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ with $E=2$ and $L=100$.}
+\end{subfigure}
+\caption{}
 \end{figure}
 
 The directed correlation acts as expected for $L=100$, $E=2$, and $\tau=1$.  These values can be used (along with $r_x$ and $r_y$) to see how the directed correlation behaves over a range of $\beta_{yx}$ given $\beta_{xy}=0.5$.  Figure \ref{fig:CxyCyxVByx_raw} shows $C_{YX}$ and $C_{XY}$ plotted over the range $\beta_{yx}\in[0.01,1.0]$ (with $\beta_{xy}=0.5$), and Figure \ref{fig:CxyCyxVByx_diff} shows the difference $\Delta = (C_{XY}-C_{YX})$ over the same range.
 \begin{figure}[h!t]
+\centering
+\begin{subfigure}[b]{0.4\textwidth}
 \label{fig:CxyCyxVByx_raw}
-\includegraphics[scale=1]{CxyCyxVByx_raw.eps}
+\includegraphics[scale=0.55]{CxyCyxVByx_raw.eps}
 \caption{$\left(r_x,r_y,\beta_{xy},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.5,0.4,0.2\right)$ with $\left(E,L,\tau\right)=\left(2,500,1\right)$.}
-\end{figure}
-\begin{figure}[h!t]
+\end{subfigure}
+\begin{subfigure}[b]{0.4\textwidth}
 \label{fig:CxyCyxVByx_diff}
-\includegraphics[scale=1]{CxyCyxVByx_diff.eps}
+\includegraphics[scale=0.55]{CxyCyxVByx_diff.eps}
 \caption{$\left(r_x,r_y,\beta_{xy},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.5,0.4,0.2\right)$ with $\left(E,L,\tau\right)=\left(2,500,1\right)$.}
+\end{subfigure}
+\caption{}
 \end{figure}
 Notice that $\Delta$ is an increasing function of $\beta_{yx}$ that crosses zero around $\beta_{yx}=0.5$, as expected given the discussion of the CCM algorithm in the beginning sections.  Figure \ref{fig:CxyCyxVByxBxy_diff} is a plot of $\Delta$ of ranges for both coupling constants, i.e.\ $\beta_{xy}\in[0.01,1.0]$ and $\beta_{yx}\in[0.01,1.0]$.
 \begin{figure}[h!t]
+\centering
 \label{fig:CxyCyxVByxBxy_diff}
-\includegraphics[scale=1]{CxyCyxVByxBxy_diff.eps}
+\includegraphics[scale=0.55]{CxyCyxVByxBxy_diff.eps}
 \caption{$\left(r_x,r_y,X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.2,0.4,0.2\right)$ with $\left(E,L,\tau\right)=\left(2,100,1\right)$.}
 \end{figure}
 Following the intuitive expectation, $\beta_{xy}>\beta_{yx}\Rightarrow \Delta<0$ and $\beta_{xy}<\beta_{yx}\Rightarrow \Delta>0$.
 
-Notice,$\Delta$ is not symmetric about zero for the pair $(\beta_{xy},\beta_{yx})$; i.e.\
+Notice, $\Delta$ is not symmetric about zero for the pair $(\beta_{xy},\beta_{yx})$; i.e.\
 $$
 \left(\beta_{xy},\beta_{yx}\right) = \left(0.5,0.01\right) \Rightarrow \Delta \approx -0.27\;\;,
 $$
@@ -159,7 +170,9 @@ $$
 $$
 
 Given the results of this section, the CCM algorithm does provide a kind of coarse grained quantification of the idea of ``driving'' between two time series.  More specifically, the sign of $\Delta$ provides information about the relative strength of dependencies between two time series.
+
 \section{Applying CCM to Known Dynamics}
+
 The results shown above for the example presented by Sugihara appear to imply the following:
 \begin{enumerate}
 \item The CCM method is not robust with respect to the embedding dimension (i.e.\ $E$) or lag time step (i.e.\ $\tau$).
@@ -174,47 +187,55 @@ $$
 $$
 where $I$ is the current, $V$ is the voltage, $R$ is the resistance, and $L$ is the inductance.  The driving time series will be the voltage $V$ and the response times series will be the current $I$.  The resistance and inductance will be considered fixed.
 
-Consider an RL circuit with $(R,L) = (0.5,10)$.  If the voltage times series $V$ consists of two triangular pulses separated by constant spans of $V=0$, then the current times series $I$ will likewise has two maximums as seen in Figure \ref{fig:RL_trigsignals}.
+Consider an RL circuit with $(R,L) = (0.5,10)$.  If the voltage times series $V$ consists of two triangular pulses separated by constant spans of $V=0$, then the current times series $I$ will likewise has two maximums as seen in Figure \ref{fig:RL_trigsignals}.  The directed correlations $C_{VI}$ and $C_{IV}$ can be plotted as a function of the embedding dimension $E$ to show that $C_{VI}>C_{IV}$ for $E=2,3,\ldots,10$.  This plot is Figure \ref{fig:RL_trigsignalsCCM}.
 \begin{figure}[h!t]
+\centering
+\begin{subfigure}[b]{0.4\textwidth}
 \label{fig:RL_trigsignals}
-\includegraphics[scale=1]{RL_trigsignals.eps}
+\includegraphics[scale=0.55]{RL_trigsignals.eps}
 \caption{$(R,L) = (0.5,10)$}
-\end{figure}
-The directed correlations $C_{VI}$ and $C_{IV}$ can be plotted as a function of the embedding dimension $E$ to show that $C_{VI}>C_{IV}$ for $E=2,3,\ldots,10$.  This plot is Figure \ref{fig:RL_trigsignalsCCM}.
-\begin{figure}[h!t]
+\end{subfigure}
+\begin{subfigure}[b]{0.4\textwidth}
 \label{fig:RL_trigsignalsCCM}
-\includegraphics[scale=1]{RL_trigsignalsCCM.eps}
+\includegraphics[scale=0.55]{RL_trigsignalsCCM.eps}
 \caption{$(R,L) = (0.5,10)$ with $\left(E,L,\tau\right)=\left(2,100,1\right)$}
+\end{subfigure}
+\caption{}
 \end{figure}
 This result (i.e.\ that the system is directionally correlated from $V$ to $I$) is expected because $V\Rightarrow I$ (i.e.\ the voltage drives the current).
 
-Consider the case when $V$ is a discrete sine function; see Figure \ref{fig:RL_sinsignals} for a plot of the $V$ and $I$ times series.
+Consider the case when $V$ is a discrete sine function; see Figure \ref{fig:RL_sinsignals} for a plot of the $V$ and $I$ times series.  The values of $C_{VI}$ and $C_{IV}$ are different than they were in the example of the previous paragraph but the general relationship is the same, i.e.\ $C_{VI}>C_{IV}$ for $E=2,3,\ldots,10$.  See Figure \ref{fig:RL_sinsignalsCCM}.
 \begin{figure}[h!t]
+\centering
+\begin{subfigure}[b]{0.4\textwidth}
 \label{fig:RL_sinsignals}
-\includegraphics[scale=1]{RL_sinsignals.eps}
+\includegraphics[scale=0.55]{RL_sinsignals.eps}
 \caption{$(R,L) = (0.5,10)$}
-\end{figure}
-The values of $C_{VI}$ and $C_{IV}$ are different than they were in the example of the previous paragraph but the general relationship is the same, i.e.\ $C_{VI}>C_{IV}$ for $E=2,3,\ldots,10$.  See Figure \ref{fig:RL_sinsignalsCCM}.
-\begin{figure}[h!t]
+\end{subfigure}
+\begin{subfigure}[b]{0.4\textwidth}
 \label{fig:RL_sinsignalsCCM}
-\includegraphics[scale=1]{RL_sinsignalsCCM.eps}
+\includegraphics[scale=0.55]{RL_sinsignalsCCM.eps}
 \caption{$(R,L) = (0.5,10)$ with $\left(E,L,\tau\right)=\left(2,100,1\right)$}
+\end{subfigure}
+\caption{}
 \end{figure}
 
-The ``non-robust'' features of the directed correlations (with respect to $E$) can be recovered for the RL circuit by setting each point of $V$ to be a random value.  While such a voltage time series may be defined as ``unphysical'', it will illustrate the same $E$-dependent behavior of the directed correlations that was seen with the Sugihara example.  Consider the $V$ and $I$ times series of Figure \ref{fig:RL_randsignals}, where $V$ is a set of pseudo-random numbers generated with Matlab.
+The ``non-robust'' features of the directed correlations (with respect to $E$) can be recovered for the RL circuit by setting each point of $V$ to be a random value.  While such a voltage time series may be suspect (i.e.\ it results in possibly non-stationary current response time series), it will illustrate the same $E$-dependent behavior of the directed correlations that was seen with the Sugihara example.  Consider the $V$ and $I$ times series of Figure \ref{fig:RL_randsignals}, where $V$ is a set of pseudo-random numbers generated with Matlab.  The plot of $C_{VI}$ and $C_{IV}$ for $E=2,3,\ldots,10$ (see Figure \ref{fig:RL_randsignalsCCM}) shows that $C_{VI}>C_{IV}$ if $E\ge 4$ but $C_{VI}<C_{IV}$ if $E<4$.
 \begin{figure}[h!t]
+\centering
+\begin{subfigure}[b]{0.4\textwidth}
 \label{fig:RL_randsignals.eps}
-\includegraphics[scale=1]{RL_randsignals.eps}
+\includegraphics[scale=0.55]{RL_randsignals.eps}
 \caption{$(R,L) = (0.5,10)$}
-\end{figure}
-The plot of $C_{VI}$ and $C_{IV}$ for $E=2,3,\ldots,10$ (see Figure \ref{fig:RL_randsignalsCCM})
-\begin{figure}[h!t]
+\end{subfigure}
+\begin{subfigure}[b]{0.4\textwidth}
 \label{fig:RL_randsignalsCCM}
-\includegraphics[scale=1]{RL_randsignalsCCM.eps}
+\includegraphics[scale=0.55]{RL_randsignalsCCM.eps}
 \caption{$(R,L) = (0.5,10)$ with $\left(E,L,\tau\right)=\left(2,100,1\right)$}
+\end{subfigure}
+\caption{}
 \end{figure}
-shows that $C_{VI}>C_{IV}$ if $E>= 4$ but $C_{VI}<C_{IV}$ if $E<4$ 
-
+ 
 These results seem to imply that the robustness of the CCM method may be related to the autocorrelation of the ``driving'' time series.  This idea will be explored after the next section.
 
 \subsection{Lorenz System}
@@ -235,7 +256,6 @@ C_{zy} &\approx & 0.45
 \end{eqnarray*}
 where $x(t)$, $y(t)$, and $z(t)$ are defined by the dynamical system at the beginning of this section.  These results seem to imply $z\Rightarrow x$ and $z\Rightarrow y$ with no conclusion for the relationship between $x$ and $y$.  These results seem confusing.  In particular, it seems to make sense that $z$ could be a stronger driver of $y$ than $y$ is of $z$ (i.e.\ $z\Rightarrow y$) but the implication that $z$ is a stronger driver of $x$ than $x$ is of $z$ (i.e.\ $z\Rightarrow x$) is more difficult to interpret given that $z$ only affects $x$ through $y$.
 
-
 If $(\sigma,\beta,\rho)=(0.01,8/3,28)$, then the system's directed correlations are as follows:
 \begin{eqnarray*}
 C_{xy} &\approx & 0.79\\
@@ -245,7 +265,7 @@ C_{zx} &\approx & -0.74\\
 C_{yz} &\approx & 0.47\\
 C_{zy} &\approx & 0.71
 \end{eqnarray*}
-which implies $x\Rightarrow y$, $z\Rightarrow y$, and $x\Rightarrow z$.  Both $x\Rightarrow y$ and $x\Rightarrow z$ seems to make intuative sense given the smaller $\sigma$ in this example versus the previous example, and $z\Rightarrow y$ is consistent with the previous example which, again, makes sense because neither $\rho$ nor $\beta$ was changed.
+which implies $x\Rightarrow y$, $z\Rightarrow y$, and $x\Rightarrow z$.  Both $x\Rightarrow y$ and $x\Rightarrow z$ seems to make intuitive sense given the smaller $\sigma$ in this example versus the previous example, and $z\Rightarrow y$ is consistent with the previous example which, again, makes sense because neither $\rho$ nor $\beta$ was changed.
 
 If $(\sigma,\beta,\rho)=(10,0.01,28)$, then the system's directed correlations are as follows:
 \begin{eqnarray*}
@@ -257,12 +277,97 @@ C_{yz} &\approx & 0.01\\
 C_{zy} &\approx & 0.40
 \end{eqnarray*}
 
+This section will be expanded $\ldots$
 
+\section{Embedding Dimension and Lag Time Step}
+The embedding dimension ($E$) dependence of the CCM algorithm in the above examples implies a strong need to understand that dependence in terms of the time series used to create the shadow manifold.  It would be difficult to justify any results derived from the use of the CCM method on empirical data (e.g.\ the solar data) without such an understanding.  The ideal solution would be the development of simple statistical procedures (e.g.\ through the use of autocorrelations, entropies, etc$.$) to find the ``correct'' embedding dimension $E_X$ given a times series $X$.
 
+Consider the Sugihara example system with $\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$.  Define the $l$-lagged autocorrelation $A_l^X$ of $X(t)$ as $A_l^X=\rho_{X(t),X(t-l)}$ given $t\in(l,L]$ where $L$ is the library length.  For this example system, both $|A_l^X|$ and $|A_l^Y|$ can be plotted as a function of $l$.  See Figure \ref{fig:autocorrSug}.
+\begin{figure}[h!t]
+\centering
+\label{fig:autocorrSug}
+\includegraphics[scale=0.55]{autocorrSug.eps}
+\caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$.}
+\end{figure}
+The max and min of $|A_l^X|$ occur at $l=1$ and $l=21$, respectively, and the  max and min of $|A_l^Y|$ occur at $l=1$ and $l=30$.  Define $\Delta=C_{XY}-C_{YX}$.  Given the parameters of this example system, it is expected that $\Delta>0$ (because ``intuitively'', the parameter set seems to imply $X\Rightarrow Y$ for this example).  The embedding dimension dependence of $\Delta$ can be plotted to reiterate the conclusions of the previous section.  See Figure \ref{fig:SugDeltavE}.
+\begin{figure}[h!t]
+\centering
+\begin{subfigure}[b]{0.4\textwidth}
+\label{fig:SugDeltavE}
+\includegraphics[scale=0.55]{SugDeltavE.eps}
+\caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ and $\left(L,\tau\right) = \left(100,1\right)$.}
+\end{subfigure}
+\begin{subfigure}[b]{0.4\textwidth}
+\label{fig:SugDeltavEandL}
+\includegraphics[scale=0.55]{SugDeltavEandL.eps}
+\caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ and $ \tau = 1$.}
+\end{subfigure}
+\caption{}
+\end{figure}
+Notice $\Delta = \max_E \Delta$ for $E=2$ which corresponds a autocorrelation lag $l=1$.  So, it appears that for this example system, the required embedding dimension $E$ to achieve $\Delta=\max_E \Delta$ could be found by determining $l$ such that $|A_l^X|=\max_l |A_l^X|$ and $|A_l^Y|=\max_l |A_l^Y|$.  However, it can be seen from the plot that $E\in [2,5]\rightarrow \Delta>0$ and $E\in [6,10]\rightarrow \Delta<0$.  This change in sign of $\Delta$ does not appear to correlate with the autocorrelation lags in a straightforward way akin to the above relationship between $l$ and $\max_E \Delta$.  The lack of correlation between $l$ and the positivity of $\Delta$ may indicate the the relationship between $l$ and $\max_E \Delta$ is coincidental or a specific property of this example system.  Also notice the value of $E$ for which $\Delta$ changes signs depends on the library length $L$ (although, for this example at least, the value of $E$ such that $\Delta = \max_E \Delta$ seems to be independent of $L$).  See Figure \ref{fig:SugDeltavEandL} to see the data that leads to this observation.  Before these ideas are explored with other example systems, consider the question of why $E$ is the same for both shadow manifolds.
 
+There does not seem to be any {\em a priori} reason that $E$ needs to be the same for both shadow manifolds used to calculate $\Delta$.  Figure \ref{fig:SugExVaryE} shows $\Delta$ as a function of the embedding dimension used to create the $X$ shadow manifold, $E_X$, and the embedding dimension used to create the $Y$ shadow manifold, $E_Y$.  
+\begin{figure}[h!t]
+\centering
+\label{fig:SugExVaryE}
+\includegraphics[scale=0.55]{SugExVaryE.eps}
+\caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ and $\left(L,\tau\right) = \left(100,1\right)$.}
+\end{figure}
+Notice that $E_X \in [2,4]\rightarrow \Delta>0\;\forall E_Y\in[2,10]$ and $E_Y \in[2,6]\rightarrow \Delta>0\;\forall E_X\in[2,10]$.  So, at least for this example system and embedding dimensions $\in[2,10]$, achieving $\Delta>0$ is not nessicarily dependent on both $E_X$ and $E_Y$.  
 
+Consider the Sugihara example system with $\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.1,3.9,0.2,0.002,0.4,0.2\right)$.  This parameter set leads to the expectation of $\Delta<0$ and, indeed, $\Delta<0$ if $(L,\tau)=(100,1)$ with $E_X,E_Y\in[2,3]$.  See Figure \ref{fig:SugEx2VaryE}.
+\begin{figure}[h!t]
+\centering
+\begin{subfigure}[b]{0.4\textwidth}
+\label{fig:SugEx2VaryE}
+\includegraphics[scale=0.55]{SugEx2VaryE.eps}
+\caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.1,3.9,0.2,0.002,0.4,0.2\right)$ and $\left(L,\tau\right) = \left(100,1\right)$.}
+\end{subfigure}
+\begin{subfigure}[b]{0.4\textwidth}
+\label{fig:SugEx2VaryEauto}
+\includegraphics[scale=0.55]{SugEx2VaryEauto.eps}
+\caption{$\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.1,3.9,0.2,0.002,0.4,0.2\right)$ and $\left(L,\tau\right) = \left(100,1\right)$.}
+\end{subfigure}
+\caption{}
+\end{figure}
+Plotting $|A_l^X|$ and $|A_l^Y|$ for this example system (see Figure \ref{fig:SugEx2VaryEauto}) reveals $|A_l^X|=\max_l |A_l^X|$ and $|A_l^Y|=\max_l |A_l^Y|$ for $l=1$, just as in the example of the previous paragraphs.  So, the above method to determine the ``correct'' embedding dimension from the data using autocorrelation lags seems to provide answers that agree with intuition in at least two examples.  Although it should be noted that in the second example, preserving the intuative conclusion (i.e. $\Delta<0$) cannot be acheived with $E_X=2$ with any $E_Y\in[2,10]$ or $E_Y$ with any $E_X\in[2,10]$.  In constrant to the first example, it is possible in the second example to acheive $\Delta>0$ with $E_{X(Y)}=2$ and $E_{Y(X)}\in[6,10]$.
 
+The shadow manifold is used to estimate the time series of interest, so it seems reasonable that the embedding dimension of the shadow manifold should be related to the autocorrelation lag of the time series of interest rather than the times series used to create the shadow manifold.  Notice that this approach would not change the relationship between $l$ and $\max_E \Delta$ discussed in the previous paragraph.
 
-
-
+Using the autocorrelation method discussed above may provided embedding dimensions that agree with intuition, but the method does not explain the apparent dependence of the CCM on embedding dimension.  As an attempt o understand this dependence consider the following algorithm (``NN1''): 
+\begin{enumerate}
+\item Embed $X$ in a manifold with dimension $E$.
+\item Record the time step locations $\tilde{t}^E_i$ (in the original $X$) and weights $w^E_i$ of the $N=E+1$ dimensional point $X(t)$ 
+\item Repeat steps 1 and 2 for $E=E+1$.
+\item Stop when $\{\tilde{t}_i^E\} \neq \{\tilde{t}_i^{E-1}\}$; i.e.\ stop when the set of time step locations in the $N$-dimensional point given $E$ is not the same as the set of time step locations in the $N$-dimensional point given $E-1$.  (Notice that the algortihm completely ignores $\{w_i^E\}$.)
+\item Record $E$ (i.e.\ the embedding dimension for which the above iteration is halted) as $E^H_t$.
+\item Repeat steps 1-4 for $t=t+1$ for all $t\le T$ where $T$ is dependent on the library length $L$ of $X$ .
+\item Find the mode of $\{E_t^H\}$.
+\end{enumerate}
+Also consider the following, very similar, algorithm (``NN2''):
+\begin{enumerate}
+\item Embed $X$ in a manifold with dimension $E$.
+\item Record the time step locations $\tilde{t}^E_i$ (in the original $X$) and weights $w^E_i$ of the $N=E+1$ dimensional point $X(t)$ 
+\item Repeat steps 1 and 2 for $E=E+1$.
+\item Stop when $\exists w^E_i < \delta$; i.e.\ stop when one of the weights $N$-dimensional point drops below some cutoff value $\delta$.  (Notice that the algortihm completely ignores $\{t_i^E\}$.)
+\item Record $E$ (i.e.\ the embedding dimension for which the above iteration is halted) as $E^H_t$.
+\item Repeat steps 1-4 for $t=t+1$ for all $t\le T$ where $T$ is dependent on the library length $L$ of $X$ .
+\item Find the mode of $\{E_t^H\}$.
+\end{enumerate}
+The second algorithm (NN2) requires the selection of some $\delta$ and both algorithms require determining $T$.  Consider the Sugihara example with $\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ and $\left(L,\tau\right) = \left(100,1\right)$.  Applying NN1 to $X$ yields 7 for $T=10$ and $T=20$.  The behavior of NN1 on $X$ for $T\in[1,50]$ can be seen in \ref{fig:SugExNN1vT}.
+\begin{figure}[h!t]
+\centering
+\begin{subfigure}[b]{0.4\textwidth}
+\label{fig:SugExNN1vT}
+%\includegraphics[scale=1]{SugExNN1vT.eps}
+\caption{ $\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ and $\left(L,\tau\right) = \left(100,1\right)$.}
+\end{subfigure}
+\begin{subfigure}[b]{0.4\textwidth}
+\label{fig:SugExNN1vTvd}
+%\includegraphics[scale=1]{SugExNN1vTvd.eps}
+\caption{ $\left(r_x,r_y,\beta_{xy},\beta_{yx},X(t_0),Y(t_0)\right) = \left(3.8,3.5,0.01,0.2,0.4,0.2\right)$ and $\left(L,\tau\right) = \left(100,1\right)$.}
+\end{subfigure}
+\caption{}
+\end{figure}
+Applying NN2 to $X$ with $T=10$ yields 2 for $\delta=0.05$ and $\delta=0.01$, but yields for $\delta=$.  The addition of the free parameter $\delta$ makes NN2 a little less convincing than NN1 (e.g.\ how is a particular choice for $\delta$ justified?).  The behavior of NN2 on $X$ for $T\in[1,50]$ and $\delta\in[10^{-5},10^{-2}]$ (in steps of ??) can be seen in \ref{fig:SugExNN1vTvd}.
 \end{document}
